# AndroWobble

./: packetDesign.txt  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: audio_uart.cpp  audio_uart.h  common.h  native-lib.cpp  native-lib.h  pid.cpp  pid.h
android/app/src/main/java/com/davidawehr/androwobble/: BalanceService.java  MainActivity.java  NativeCalls.java
android/app/src/main/res/layout/: activity_main.xml
android/howie/: CMakeLists.txt  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/davidawehr/androwobble/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio_uart.cpp  native-lib.cpp  native-lib.h  pid.cpp
app/src/main/java/com/davidawehr/androwobble/: BalanceService.java  MainActivity.java  NativeCalls.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/davidawehr/androwobble/: ExampleUnitTest.java
arduino/androWobble/: androWobble.ino
arduino/androWobble_TLE_driver/: androWobble_TLE_driver.ino
arduino/androWobble_wasd_test/: androWobble_wasd_test.ino
arduino/ser_test/: ser_test.ino
howie/: CMakeLists.txt  build.gradle
howie/src/main/java/com/example/android/howie/: HowieEngine.java
